# korrektor

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  README_ALT.md  create-project.py  flake.nix  gtk-rust-template.doap  meson.build
.github/workflows/: ci.yml
build-aux/: com.belmoussaoui.GtkRustTemplate.Devel.json  dist-vendor.sh  uz.xinux.korrektor.Devel.json
data/: com.belmoussaoui.GtkRustTemplate.desktop.in.in  com.belmoussaoui.GtkRustTemplate.metainfo.xml.in.in  com.belmoussaoui.GtkRustTemplate.service.in  meson.build  uz.xinux.korrektor.desktop.xml.in  uz.xinux.korrektor.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: shortcuts.ui
po/: POTFILES.in
shells/korrektor/: default.nix
src/: application.rs  config.rs  main.rs  meson.build  window.rs
