[package]
name = "korrektor"
# authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
version = "0.1.0"

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { version = "0.11.2", package = "gtk4", features = ["v4_8"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
